--- a/shopping_server/src/main/resources/application.yml
+++ b/shopping_server/src/main/resources/application.yml
@@ -4,8 +4,15 @@ spring:
   application:
     name: shopping
   datasource:
-      url: jdbc:mysql://localhost/blogs?characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://localhost/shopping?characterEncoding=utf-8&useSSL=false
       driver-class-name: com.mysql.jdbc.Driver
       username: root
       password: 123456
       type: com.alibaba.druid.pool.DruidDataSource
+mybatis:
+  type-aliases-package: com.dtdhehe.shopping.entity
+  configuration:
+    map-underscore-to-camel-case: true
+logging:
+  level:
+    com.dtdhehe.blogs.mapper: debug
